manifests/argocd/nginx/pages-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pages
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
        k8s-app: pages
  template:
    metadata:
      labels:
        k8s-app: pages
    spec:
      serviceAccountName: pages-sa
      containers:
      - name: pages
        image: moros333/mydemos:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 5035
