manifests/argocd/nginx/pages-sv.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: pages
  name: pages
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 5035
    protocol: TCP
  selector:
    k8s-app: pages
  type: LoadBalancer
