manifests/argocd/nginx/pages-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pages
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
        k8s-app: pages
  template:
    metadata:
      labels:
        k8s-app: pages
    spec:
      containers:
      - name: pages
        image: moros333/mydemos:6.0
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 5035
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: pages
  name: pages
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 5035
    protocol: TCP
  selector:
    k8s-app: pages
