manifests/argocd/nginx/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: pages-ingress
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: pages.tikaldev.click
      http:
        paths:
        - backend:
            service:
              name: pages
              port:
                number: 80
          path: /*
          pathType: Prefix
